# work-planner

./: .gitignore  .pylintrc  CHANGELOG.md  README.md  pyproject.toml  tox.ini
tests/: conftest.py  factories.py  test_crud.py  test_models.py  test_service.py  test_utils.py
work_planner/: __main__.py  crud.py  database.py  enums.py  errors.py  fields.py  filters.py  models.py  schemas.py  service.py  utils.py
workplanner/: __init__.py  app.py  cli.py  const.py  crud.py  database.py  errors.py  fields.py  filters.py  main.py  models.py  resources.py  schemas.py  service.py  settings.py  utils.py  views.py
