[tool.poetry]
name = "WorkPlanner"
version = "0.1.0"
description = "Microservice for scheduling tasks"
authors = ["Pavel Maksimov <vur21@ya.ru>"]
keywords = ["python", "tasker", "scheduler", "task-manager", "task-scheduler"]
license = "Apache-2.0"
homepage = "https://github.com/pavelmaksimov/work-planner"
include = [
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]
packages = [
    { include = "workplanner" },
]
readme = "README.md"
repository = "https://github.com/pavelmaksimov/work-planner.git"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0b"
pendulum = "*"
fastapi = "^0.88"
orjson = "*"
typer = "^0.4"
loguru = "*"
uvicorn = {extras = ["standart"], version = "*"}
better-exceptions = "*"
confz = "*"

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
flake8 = "^6.0"
factory-boy = "*"
mccabe = "*"
mypy = "*"
pytest = "*"
pylint = "*"
pydantic-factories = "*"
tox = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
workplanner = 'workplanner.main:cli'
